Lattice - Influence vertexgroup in curve modifier gets ignored #41713

Closed
opened 2014-09-04 14:08:24 +02:00 by Karja Krähwald · 5 comments

System Information
Windows 7 64, HD 5770

Blender Version
Broken: 9337574 (2.71 release) + c670ceb

Short description of error
Curve modifiers vertexgroup option to determine the influence doesnt work when the modifier is used on a lattice.

Exact steps for others to reproduce the error
LatticeCurveBug.blend
(There is a bone to check if it works at all)

  • Add a Curve.
  • Add a Lattice.
    • Give it a new vertex group (=Group).
    • Assign it partially on Lattices mesh.
  • Give Lattice a Curve modifier.
    • Use Curve.
    • Use the new vertex group (Group) as Influence group in the modifier.

Problem: The whole lattice gets deformed, no matter if vertices belong to the group or not.

**System Information** Windows 7 64, HD 5770 **Blender Version** Broken: 9337574 (2.71 release) + c670ceb **Short description of error** Curve modifiers vertexgroup option to determine the influence doesnt work when the modifier is used on a lattice. **Exact steps for others to reproduce the error** [LatticeCurveBug.blend](https://archive.blender.org/developer/F108739/LatticeCurveBug.blend) (There is a bone to check if it works at all) - Add a Curve. - Add a Lattice. - Give it a new vertex group (=Group). - Assign it partially on Lattices mesh. - Give Lattice a Curve modifier. - Use Curve. - Use the new vertex group (Group) as Influence group in the modifier. **Problem:** The whole lattice gets deformed, no matter if vertices belong to the group or not.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @karja

Added subscriber: @karja
Bastien Montagne self-assigned this 2014-09-04 15:32:59 +02:00

This issue was referenced by 9c95fd0a98

This issue was referenced by 9c95fd0a988fcd14f050098385e5461e2e51100d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 9c95fd0a98.

Closed by commit 9c95fd0a98.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41713
No description provided.